// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > correctly positions tooltip content based on position prop 1`] = `
<DocumentFragment>
  <div
    class="flCLvP"
  >
    Hover over me
    <div
      class="hkUfiA"
    >
      Hello!
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > correctly positions tooltip content based on position prop 2`] = `
<DocumentFragment>
  .c1 {
  background-color: rgba(0, 0, 0, 0.8);
  border-radius: 6px;
  color: rgb(255, 255, 255);
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: left;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  top: 150%;
  left: 50%;
  margin-left: -80px;
}

.c0 {
  border-bottom: 1px solid rgb(217, 217, 217);
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0 :hover>:last-child {
  opacity: 1;
  visibility: visible;
  z-index: 1070;
}

<div
    class="c0"
  >
    Hover over me
    <div
      class="c1"
    >
      Hello!
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > correctly positions tooltip content based on position prop 3`] = `
<DocumentFragment>
  .c1 {
  background-color: rgba(0, 0, 0, 0.8);
  border-radius: 6px;
  color: rgb(255, 255, 255);
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: left;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  right: 120%;
  top: -5px;
}

.c0 {
  border-bottom: 1px solid rgb(217, 217, 217);
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0 :hover>:last-child {
  opacity: 1;
  visibility: visible;
  z-index: 1070;
}

<div
    class="c0"
  >
    Hover over me
    <div
      class="c1"
    >
      Hello!
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > correctly positions tooltip content based on position prop 4`] = `
<DocumentFragment>
  .c1 {
  background-color: rgba(0, 0, 0, 0.8);
  border-radius: 6px;
  color: rgb(255, 255, 255);
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: left;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  top: -5px;
  left: 120%;
}

.c0 {
  border-bottom: 1px solid rgb(217, 217, 217);
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0 :hover>:last-child {
  opacity: 1;
  visibility: visible;
  z-index: 1070;
}

<div
    class="c0"
  >
    Hover over me
    <div
      class="c1"
    >
      Hello!
    </div>
  </div>
</DocumentFragment>
`;
